<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#00AC2525"
    tools:context=".PersonalDataActivity">

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:onClick="muestraCalendario"
        android:text="@string/cambiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtFecha"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="casual"
        android:foregroundTint="@color/black"
        android:text="@string/informaci_n_personal"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="34sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSexo"
        android:layout_width="71dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="casual"
        android:foregroundTint="@color/black"
        android:text="@string/sexo"
        android:textAlignment="inherit"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/imgSexo"
        app:layout_constraintTop_toBottomOf="@+id/editApellidos" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="229dp"
        android:layout_height="68dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtSexo"
        app:layout_constraintTop_toBottomOf="@+id/editApellidos">

        <RadioButton
            android:id="@+id/rbtnMujer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="casual"
            android:text="@string/mujer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editApellidos" />

        <RadioButton
            android:id="@+id/rbtnHombre"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="casual"
            android:text="@string/hombre"
            app:layout_constraintEnd_toStartOf="@+id/rbtnMujer"
            app:layout_constraintTop_toBottomOf="@+id/editApellidos" />

    </RadioGroup>

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:hint="@string/nombres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtInfo" />

    <EditText
        android:id="@+id/editApellidos"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:hint="@string/apellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgApellido"
        app:layout_constraintTop_toBottomOf="@+id/editNombre" />

    <Spinner
        android:id="@+id/spnGrado"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/grado_de_escolaridad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgGrado2"
        app:layout_constraintTop_toBottomOf="@+id/txtFecha" />

    <ImageView
        android:id="@+id/imgNombre"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/nombres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInfo"
        app:srcCompat="@drawable/nombre" />

    <ImageView
        android:id="@+id/imgSexo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/sexo"
        app:layout_constraintBottom_toTopOf="@+id/imgFecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgApellido"
        app:srcCompat="@drawable/sexo" />

    <ImageView
        android:id="@+id/imgFecha"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/fecha_de_nacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSexo"
        app:srcCompat="@drawable/fecha" />

    <ImageView
        android:id="@+id/imgGrado2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/grado_de_escolaridad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFecha"
        app:srcCompat="@drawable/grado" />

    <ImageView
        android:id="@+id/imgApellido"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/apellidos"
        app:layout_constraintBottom_toTopOf="@+id/imgSexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNombre"
        app:srcCompat="@drawable/apellido" />

    <Button
        android:id="@+id/siguienteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="sigAct"
        android:text="@string/siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnGrado"
        tools:ignore="UsingOnClickInXml" />

    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/fecha_de_nacimiento"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/imgFecha"
        app:layout_constraintTop_toBottomOf="@+id/txtSexo" />

    <DatePicker
        android:id="@+id/dpFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="24dp"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
